@@ -208,6 +208,9 @@ Version 1.5.2 - SVN
     cannot be circumvented by manipulating the URL. External plugins might
     rely on init.php guaranteeing that the user is logged in.
   - Sort readdir() output in conf.pl (#1755886).
+  - Made the webmail_top hook work again for plugins that want to change
+    the URI of the "right" frame; plugins have to change the value of the
+    global variable $right_frame_url
 
 Version 1.5.1 (branched on 2006-02-12)
 --------------------------------------
